# dj-app

./: .env.example  .gitignore  LOG.md  Makefile  README.md  ROADMAP.md
backend/: pyproject.toml
backend/axiom/: main.py  mixplan.py  orchestrator.py  rules.py  store.py
backend/axiom/analysis/: analyzer.py  camelot.py
backend/axiom/brain/: client.py  prompts.py  schemas.py
backend/axiom/sources/: audius.py  base.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  ws.ts
frontend/src/console/: Console.tsx  DeckPanel.tsx
frontend/src/dashboard/: Dashboard.tsx
frontend/src/engine/: AudioEngine.ts  Deck.ts  Mixer.ts  types.ts
scripts/: brain_harness.py  ingest.py  smoke_test.py  ws_listen.py  ws_stop.py  ws_test.py
