[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "axiom"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.28.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "tqdm>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["axiom"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
